--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "rich",
     "pydantic[email]>=2.0.0",
     "docxtpl>=0.20.2",
+    "pyyaml>=6.0.3",
 ]
 
 [dependency-groups]
